--- a/css/base.css
+++ b/css/base.css
@@ -440,6 +440,7 @@ dd { margin: 0 0 0 20px; }
 img {
    max-width: 100%;
    height: auto;
+   display: inherit;
 }
 
 img.pull-right { margin: 12px 0px 0px 18px; }
