--- a/css/style.css
+++ b/css/style.css
@@ -62,8 +62,8 @@
 }
 .parallax-disenio{
 	position: absolute;
-	width: 10%;
-	height: auto;
+	/*width: 10%;*/
+	/*height: auto;*/
 }
 section{position: relative;}
 
